...
      _InstructorDashboardScreenState();
}

class _InstructorDashboardScreenState
    extends ConsumerState<InstructorDashboardScreen> {
  final GlobalKey<ScaffoldState> _scaffoldKey = GlobalKey<ScaffoldState>();
  String instructorName = "Instructor";
  String instructorRole = "";
  List<ClassEntity> get classes {
    return ref.watch(classProvider).classes;
  }

  Future<void> loadInstructorData() async {
...
            mainAxisAlignment: MainAxisAlignment.spaceBetween,
            children: [
              Column(
                crossAxisAlignment: CrossAxisAlignment.start,
                children: [
                  const Text(
                    "Welcome back,",
                    style: TextStyle(
                      color: Colors.white,
                      fontSize: 22,
                      fontWeight: FontWeight.w500,
                    ),
                  ),
...

          Row(
            children: [
              Expanded(
                child: StatCard(
                  icon: Icons.menu_book_outlined,
                  title: "Total Classes",
                  value: classes.length.toString(),
                ),
              ),
              const SizedBox(width: 16),
              Expanded(
                child: StatCard(
                  icon: Icons.groups_2_outlined,
                  title: "Students",
                  value: classes
                      .fold<int>(0, (sum, c) => sum + c.students)
                      .toString(),
                ),
              ),
            ],
...
      child: Column(
        crossAxisAlignment: CrossAxisAlignment.start,
        children: [
          buildQuickActions(),
          const SizedBox(height: 24),
          const Text(
            "My Classes",
            style: TextStyle(
              fontSize: 18,
              fontWeight: FontWeight.w700,
              color: Color(0xFF1D2433),
            ),
          ),
...
                  ),
                ],
              ),
              const SizedBox(height: 40),
              ListTile(
                leading: const Icon(Icons.calendar_today_outlined),
                title: const Text("Timetable"),
                onTap: () {
                  Navigator.pop(context);
                  context.push('/instructor/timetable');
                },
              ),
              ListTile(
                leading: const Icon(Icons.logout, color: Colors.red),
                title: const Text(
                  "Logout",
                  style: TextStyle(color: Colors.red),
                ),
                onTap: () {
                  Navigator.pop(context);
                  showDialog(
                    context: context,
...
                  );
                },
              ),
              ListTile(
                leading: const Icon(Icons.delete_outline, color: Colors.red),
                title: const Text(
                  "Delete Account",
                  style: TextStyle(color: Colors.red),
                ),
                onTap: () {
                  Navigator.pop(context);
                  showDialog(
                    context: context,
...
        ],
      ),
      child: Column(
        crossAxisAlignment: CrossAxisAlignment.start,
        children: [
          const Text(
            "Quick Actions",
            style: TextStyle(
              fontSize: 18,
              fontWeight: FontWeight.w600,
              color: Color(0xFF1D2433),
            ),
          ),
...
            children: [
              Expanded(
                child: QuickActionCard(
                  color: const Color(0xFFEAF1FF),
                  iconColor: const Color(0xFF1E5EFF),
                  icon: Icons.add,
                  title: "New Class",
                  onTap: () async {
                    await context.push('/instructor/create-class');
                  },
                ),
              ),
              const SizedBox(width: 16),
...

  Widget buildClassList(List<ClassEntity> classes) {
    if (classes.isEmpty) {
      return const Padding(
        padding: EdgeInsets.only(top: 20),
        child: Text(
          "No classes created yet",
          style: TextStyle(color: Colors.grey),
        ),
      );
    }

    return Column(
...
